package edu.fiuba.algoChess.modelo.batallones;

public class BatallonNull extends Batallon {

	public BatallonNull(){
	super();}
}
