@startuml

title __BATALLONES's Class Diagram__\n

  namespace edu.fiuba.algoChess {
    namespace modelo.batallones {
      abstract class edu.fiuba.algoChess.modelo.batallones.Batallon {
          + Batallon()
          {static} + batallonAsociadoONull()
          {static} + darDeAltaBatallon()
          {static} + esBatallon()
          + getPieza1()
          + getPieza2()
          + getPieza3()
          + moverBatallon()
          + setPieza1()
          + setPieza2()
          + setPieza3()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.batallones {
      class edu.fiuba.algoChess.modelo.batallones.BatallonNull {
          + BatallonNull()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.batallones {
      class edu.fiuba.algoChess.modelo.batallones.BatallonUtil {
          + BatallonUtil()
          + BatallonUtil()
          + moverBatallon()
          + moverBatallonAbajo()
          + moverBatallonArriba()
          + moverBatallonDerecha()
          + moverBatallonIzquierda()
          {static} ~ armarPosibleBatallon()
          {static} - _armarPosibleBatallon()
      }
    }
  }
  

  namespace edu.fiuba.algoChess {
    namespace modelo.batallones {
      interface edu.fiuba.algoChess.modelo.batallones.Batalloneable {
          {abstract} + actualizaPiezasEnRango()
          {abstract} + actualizaRangoInmediato()
          {abstract} + agrupar()
          {abstract} + getPiezasEnRango()
      }
    }
  }
  

  edu.fiuba.algoChess.modelo.batallones.Batallon -up-|> edu.fiuba.algoChess.modelo.entidades.Movible
  edu.fiuba.algoChess.modelo.batallones.Batallon o-- edu.fiuba.algoChess.modelo.entidades.Pieza : pieza1
  edu.fiuba.algoChess.modelo.batallones.Batallon o-- edu.fiuba.algoChess.modelo.entidades.Pieza : pieza2
  edu.fiuba.algoChess.modelo.batallones.Batallon o-- edu.fiuba.algoChess.modelo.entidades.Pieza : pieza3
  edu.fiuba.algoChess.modelo.batallones.BatallonNull -up-|> edu.fiuba.algoChess.modelo.batallones.Batallon
  edu.fiuba.algoChess.modelo.batallones.BatallonUtil -up-|> edu.fiuba.algoChess.modelo.batallones.Batallon


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
